[gd_scene load_steps=2 format=3 uid="uid://cb122d7lyvp3f"]

[ext_resource type="Script" uid="uid://ynvmvxk0wlvl" path="res://Code/OCView.gd" id="1_moar8"]

[node name="OCView" type="FoldableContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/h_separation = 2
title = "OC"
title_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
script = ExtResource("1_moar8")

[node name="MC" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 196.0
offset_bottom = 505.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MC"]
layout_mode = 2

[node name="Core" type="HBoxContainer" parent="Panel/MC/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MC/VBoxContainer/Core"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
theme_type_variation = &"Title"
text = "核心+0MHz"

[node name="HSlider" type="HSlider" parent="Panel/MC/VBoxContainer/Core"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 500.0

[node name="VRam" type="HBoxContainer" parent="Panel/MC/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MC/VBoxContainer/VRam"]
custom_minimum_size = Vector2(117, 0)
layout_mode = 2
theme_type_variation = &"Title"
text = "显存+0MHz"

[node name="HSlider" type="HSlider" parent="Panel/MC/VBoxContainer/VRam"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1000.0

[node name="OffsetVolt" type="HBoxContainer" parent="Panel/MC/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MC/VBoxContainer/OffsetVolt"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"Title"
text = "电压-0mv"

[node name="HSlider" type="HSlider" parent="Panel/MC/VBoxContainer/OffsetVolt"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 150.0

[node name="Apply" type="Button" parent="Panel/MC/VBoxContainer"]
layout_mode = 2
text = "应用"

[connection signal="value_changed" from="Panel/MC/VBoxContainer/Core/HSlider" to="Panel" method="WhenCSliderChanged"]
[connection signal="value_changed" from="Panel/MC/VBoxContainer/VRam/HSlider" to="Panel" method="WhenVramSliderChanged"]
[connection signal="value_changed" from="Panel/MC/VBoxContainer/OffsetVolt/HSlider" to="Panel" method="WhenOVSliderChanged"]
[connection signal="pressed" from="Panel/MC/VBoxContainer/Apply" to="Panel" method="WhenApplyButtonClicked"]
